tests/snapshots/input__hex_dump_debug.snap
---
source: tests/input.rs
expression: "HexDump::from(DATA)"
---
[
    Ok(
        0x616E6420_74686520__6D616E20_77656E74,
    ),
    Ok(
        0x206F7574_20666F72__206A7572_79206475,
    ),
    Ok(
        0x74792061_6E642065__78636C61_696D6564,
    ),
    Ok(
        0x2C202253_65676D65__6E746174_696F6E20,
    ),
    Ok(
        0x6661756C_74202863__6F726520_64756D70,
    ),
    Ok(
        0x65642922_0,
    ),
]
